Update dto package and add JavaFX