@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
@@ -17,10 +17,11 @@
     <lombok.version>1.18.28</lombok.version>
     <junit.version>3.8.1</junit.version>
     <modelmapper.version>2.4.4</modelmapper.version>
+    <javafx.version>21.0.5</javafx.version> <!-- Обновлено на последнюю версию JavaFX -->
   </properties>
 
   <dependencies>
-
+    <!-- Зависимости Spring Boot -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -33,6 +34,7 @@
       <version>${spring-boot.version}</version>
     </dependency>
 
+    <!-- Зависимость для PostgreSQL -->
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
@@ -40,6 +42,7 @@
       <scope>runtime</scope>
     </dependency>
 
+    <!-- Зависимость для Lombok -->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
@@ -47,12 +50,19 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- Зависимости для JavaFX -->
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>19.0.2</version>
+      <version>${javafx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>${javafx.version}</version>
     </dependency>
 
+    <!-- Тестирование -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -60,10 +70,33 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- Моделирование с ModelMapper -->
     <dependency>
       <groupId>org.modelmapper</groupId>
       <artifactId>modelmapper</artifactId>
       <version>${modelmapper.version}</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <!-- Плагин для запуска JavaFX -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <mainClass>org.example.AppLauncher</mainClass>
+          <arguments>
+            <argument>--module-path</argument>
+            <argument>C:\Users\37529\Downloads\openjfx-21.0.5_windows-x64_bin-sdk/lib</argument>
+            <argument>--add-modules</argument>
+            <argument>javafx.controls,javafx.fxml</argument>
+          </arguments>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+
 </project>
